Linter output adoptions

--- a/modules/database/templates/schema.tmpl
+++ b/modules/database/templates/schema.tmpl
@@ -1,4 +1,7 @@
 {{define "schema" -}}
+// Package database contains structures and function for generic database access
+// Generated code - do not modify it will be overwritten!!
+// Time: {{.TimeStamp}}
 package database
 
 
