--- a/modules/model/templates/repository.tmpl
+++ b/modules/model/templates/repository.tmpl
@@ -1,5 +1,6 @@
 {{define "repository" -}}
 // Package model holds all entities and cross application definitions
+// Generated code - do not modify it will be overwritten!!
 // Time of generation: {{.TimeStamp}}
 package model
 
