--- a/modules/application/main.tmpl
+++ b/modules/application/main.tmpl
@@ -1,4 +1,8 @@
 {{define "main" -}}
+// Package main contains just the initialisation code for the Server and Databse
+// access
+// Generated code - do not modify it will be overwritten!!
+// Time: {{.TimeStamp}}
 package main
 
 import (
