--- a/modules/view/templates/listtable.html
+++ b/modules/view/templates/listtable.html
@@ -21,8 +21,8 @@
                                             {{range .Fields}}
                                               {{- if eq .Kind "Parent"}}
                                               {{- else}}<td>
-                                                {{- if eq .Kind "Child"}}{{"{{"}}.LabelBy{{.Object}}Id .{{.Name}}Id{{"}}"}}
-                                                {{- else if eq .IsLabel true}}<a href="/{{$entityname | plural | lowercase}}/{{"{{.Id}}"}}">{{"{{"}}.{{.Name}}{{"}}"}}</a>
+                                                {{- if eq .Kind "Child"}}{{"{{"}}.LabelBy{{.Object}} .{{.Name}}{{"}}"}}
+                                                {{- else if eq .IsLabel true}}<a href="/{{$entityname | plural | lowercase}}/{{"{{.ID}}"}}">{{"{{"}}.{{.Name}}{{"}}"}}</a>
                                                 {{- else if eq .Kind "Boolean"}}<span>
                                                 {{"{{"}}if eq .{{.Name}} true{{"}}"}}<i class="far fa-check-square"></i>{{"{{"}}else{{"}}"}}<i class="far fa-square"></i>{{"{{"}}end{{"}}"}}
                                                 </span>
@@ -31,14 +31,14 @@
                                             {{end -}}
                                             <td>
                                             <div class="buttons is-right">
-                                            <form method="post" action="/{{.Name | plural | lowercase}}/{{"{{.Id}}"}}/delete" name="{{"{{.Id}}"}}">
+                                            <form method="post" action="/{{.Name | plural | lowercase}}/{{"{{.ID}}"}}/delete" name="{{"{{.ID}}"}}">
                                               <button class="button is-secondary">    
                                                 <span class="icon">
                                                   <i class="far fa-trash-alt"></i>
                                                 </span>
                                                 <span>Delete</span>
                                               </button>
-                                              <button class="button is-primary" formmethod="get" formaction="/{{.Name | plural | lowercase}}/{{"{{.Id}}"}}">
+                                              <button class="button is-primary" formmethod="get" formaction="/{{.Name | plural | lowercase}}/{{"{{.ID}}"}}">
                                                 <span class="icon">                                                                                                  
                                                   <i class="far fa-edit"></i>
                                                 </span>
