--- a/modules/model/templates/model.tmpl
+++ b/modules/model/templates/model.tmpl
@@ -15,7 +15,7 @@ import (
 type {{.Name}} struct {
 {{range .Fields}}{{template "modeltypes" .}}
 {{end}}
-	CreatedAt time.Time 	`json:"created_at, db:"created_at"`
+	CreatedAt time.Time 	`json:"created_at", db:"created_at"`
 }
 
 // {{.Name}}List definition for a slice of {{plural .Name}}
