--- a/modules/view/templates/detailtypes.html
+++ b/modules/view/templates/detailtypes.html
@@ -1,15 +1,15 @@
 {{define "detailtypes"}}
-{{- if eq .Kind "Text"}}            <div class="field">
+{{- if eq .Kind "Text"}}           <div class="field">
                                   <label class="label">{{.Name}} {{with .Required}}*{{end}}</label>
                                   <div class="control">
-                                    <input class="input{{"{{"}}with $errors.{{.Name}}{{"}}"}} is-danger{{"{{"}}end{{"}}"}}" type="text" placeholder="Text input" name="{{.Name | lowercase}}" id="{{.Name | lowercase}}" {{if gt .Length 0}}maxlength="{{.Length}}"{{end}} {{if gt .Size 0}}size="{{.Size}}"{{end}} value="{{"{{"}}.{{.Name}}{{"}}"}}" {{with .Required}}required{{end}}>
+                                    <input class="input{{"{{"}}with $errors.{{.Name}}{{"}}"}} is-danger{{"{{"}}end{{"}}"}}" type="text" placeholder="Text input" name="{{.Name | lowercase}}" id="{{.Name | lowercase}}" {{if gt .Length 0}}maxlength="{{.Length}}"{{end}} {{if gt .Size 0}}size="{{.Size}}"{{end}} value="{{"{{"}}.Entity.{{.Name}}{{"}}"}}" {{with .Required}}required{{end}}>
                                   </div>
                                   {{- "{{"}}with $errors.{{.Name}}{{"}}"}} <p class="help is-danger">{{"{{"}}.{{"}}"}} </p>{{"{{"}}end{{"}}"}}
                                 </div>{{end}}
-{{- if eq .Kind "Password"}}            <label class="label">{{.Name}} {{with .Required}}*{{end}}</label>
+{{- if eq .Kind "Password"}}           <label class="label">{{.Name}} {{with .Required}}*{{end}}</label>
                                 <div class="field is-grouped">                                  
                                   <div class="control">
-                                    <input class="input{{"{{"}}with $errors.{{.Name}}{{"}}"}} is-danger{{"{{"}}end{{"}}"}}" type="password" placeholder="****" name="{{.Name | lowercase}}" id="{{.Name | lowercase}}" {{if gt .Length 0}}maxlength="{{.Length}}"{{end}} {{if gt .Size 0}}size="{{.Size}}"{{end}} value="{{"{{"}}.{{.Name}}{{"}}"}}" {{with .Required}}required{{end}}>
+                                    <input class="input{{"{{"}}with $errors.{{.Name}}{{"}}"}} is-danger{{"{{"}}end{{"}}"}}" type="password" placeholder="****" name="{{.Name | lowercase}}" id="{{.Name | lowercase}}" {{if gt .Length 0}}maxlength="{{.Length}}"{{end}} {{if gt .Size 0}}size="{{.Size}}"{{end}} value="{{"{{"}}.Entity.{{.Name}}{{"}}"}}" {{with .Required}}required{{end}}>
                                   </div>
                                   <div class="control">
                                     <a class="button is-info" onmousedown="togglePassword('{{.Name | lowercase}}')" onmouseup="togglePassword('{{.Name | lowercase}}')">
@@ -18,56 +18,56 @@
                                   </div>
                                   {{- "{{"}}with $errors.{{.Name}}{{"}}"}} <p class="help is-danger">{{"{{"}}.{{"}}"}} </p>{{"{{"}}end{{"}}"}}
                                 </div>{{end}}
-{{- if eq .Kind "Longtext"}}            <div class="field">
+{{- if eq .Kind "Longtext"}}           <div class="field">
                                   <label class="label">{{.Name}} {{with .Required}}*{{end}}</label>
                                   <div class="control">
-                                    <textarea class="textarea" placeholder="Text input" name="{{.Name | lowercase}}" id="{{.Name | lowercase}}" {{if gt .Length 0}}maxlength="{{.Length}}"{{end}} {{if gt .Rows 0}}rows="{{.Rows}}"{{end}} {{if gt .Size 0}}cols="{{.Size}}"{{end}} value="{{"{{"}}.{{.Name}}{{"}}"}}" {{with .Required}}required{{end}}></textarea>
+                                    <textarea class="textarea" placeholder="Text input" name="{{.Name | lowercase}}" id="{{.Name | lowercase}}" {{if gt .Length 0}}maxlength="{{.Length}}"{{end}} {{if gt .Rows 0}}rows="{{.Rows}}"{{end}} {{if gt .Size 0}}cols="{{.Size}}"{{end}} {{with .Required}}required{{end}}>{{"{{"}}.Entity.{{.Name}}{{"}}"}}</textarea>
                                   </div>
                                   {{- "{{"}}with $errors.{{.Name}}{{"}}"}} <p class="help is-danger">{{"{{"}}.{{"}}"}} </p>{{"{{"}}end{{"}}"}}
                                 </div>{{end}}
-{{- if eq .Kind "Email"}}            <div class="field">
+{{- if eq .Kind "Email"}}          <div class="field">
                                   <label class="label">{{.Name}} {{with .Required}}*{{end}}</label>
                                   <div class="control has-icons-left">
-                                    <input class="input{{"{{"}}with $errors.{{.Name}}{{"}}"}} is-danger{{"{{"}}end{{"}}"}}" type="email" placeholder="Email" name="{{.Name | lowercase}}" id="{{.Name | lowercase}}" {{if gt .Length 0}}maxlength="{{.Length}}"{{end}} {{if gt .Size 0}}size="{{.Size}}"{{end}} value="{{"{{"}}.{{.Name}}{{"}}"}}" {{with .Required}}required{{end}}>
+                                    <input class="input{{"{{"}}with $errors.{{.Name}}{{"}}"}} is-danger{{"{{"}}end{{"}}"}}" type="email" placeholder="Email" name="{{.Name | lowercase}}" id="{{.Name | lowercase}}" {{if gt .Length 0}}maxlength="{{.Length}}"{{end}} {{if gt .Size 0}}size="{{.Size}}"{{end}} value="{{"{{"}}.Entity.{{.Name}}{{"}}"}}" {{with .Required}}required{{end}}>
                                   <span class="icon is-small is-left">
                                     <i class="fas fa-envelope"></i>
                                   </span>
                                   </div>
                                   {{- "{{"}}with $errors.{{.Name}}{{"}}"}} <p class="help is-danger">{{"{{"}}.{{"}}"}} </p>{{"{{"}}end{{"}}"}}
                                 </div>{{end}}
-{{- if eq .Kind "Tel"}}            <div class="field">
+{{- if eq .Kind "Tel"}}          <div class="field">
                                   <label class="label">{{.Name}} {{with .Required}}*{{end}}</label>
                                   <div class="control has-icons-left">
-                                    <input class="input{{"{{"}}with $errors.{{.Name}}{{"}}"}} is-danger{{"{{"}}end{{"}}"}}" type="tel" placeholder="+49" name="{{.Name | lowercase}}" id="{{.Name | lowercase}}" value="{{"{{"}}.{{.Name}}{{"}}"}}" {{with .Required}}required{{end}}>
+                                    <input class="input{{"{{"}}with $errors.{{.Name}}{{"}}"}} is-danger{{"{{"}}end{{"}}"}}" type="tel" placeholder="+49" name="{{.Name | lowercase}}" id="{{.Name | lowercase}}" value="{{"{{"}}.Entity.{{.Name}}{{"}}"}}" {{with .Required}}required{{end}}>
                                     <span class="icon is-small is-left">
                                       <i class="fas fa-phone"></i>
                                     </span>
                                   </div>
                                   {{- "{{"}}with $errors.{{.Name}}{{"}}"}} <p class="help is-danger">{{"{{"}}.{{"}}"}} </p>{{"{{"}}end{{"}}"}}
                                 </div>{{end}}
-{{- if eq .Kind "Integer"}}             <div class="field">
+{{- if eq .Kind "Integer"}}        <div class="field">
                                   <label class="label">{{.Name}} {{with .Required}}*{{end}}</label>
                                   <div class="control">
-                                    <input class="input" type="number" {{if gt .Step 0}}step="{{.Step}}"{{end}}  {{if gt .Min 0}}min="{{.Min}}"{{end}} {{if gt .Max 0}}max="{{.Max}}"{{end}} placeholder="Number input" name="{{.Name | lowercase}}" id="{{.Name | lowercase}}" {{if gt .Length 0}}maxlength="{{.Length}}"{{end}} {{if gt .Size 0}}size="{{.Size}}"{{end}} value="{{"{{"}}.{{.Name}}{{"}}"}}" {{with .Required}}required{{end}}>
+                                    <input class="input" type="number" {{if gt .Step 0}}step="{{.Step}}"{{end}}  {{if gt .Min 0}}min="{{.Min}}"{{end}} {{if gt .Max 0}}max="{{.Max}}"{{end}} placeholder="Number input" name="{{.Name | lowercase}}" id="{{.Name | lowercase}}" {{if gt .Length 0}}maxlength="{{.Length}}"{{end}} {{if gt .Size 0}}size="{{.Size}}"{{end}} value="{{"{{"}}.Entity.{{.Name}}{{"}}"}}" {{with .Required}}required{{end}}>
                                   </div>
                                   {{- "{{"}}with $errors.{{.Name}}{{"}}"}} <p class="help is-danger">{{"{{"}}.{{"}}"}} </p>{{"{{"}}end{{"}}"}}
                                 </div>{{end}}
-{{- if eq .Kind "Number"}}             <div class="field">
+{{- if eq .Kind "Number"}}      <div class="field">
                                   <label class="label">{{.Name}} {{with .Required}}*{{end}}</label>
                                   <div class="control">
-                                    <input class="input" type="number" {{if gt .Step 0}}step="{{.Step}}"{{end}}  {{if gt .Min 0}}min="{{.Min}}"{{end}} {{if gt .Max 0}}max="{{.Max}}"{{end}} placeholder="Number input" name="{{.Name | lowercase}}" id="{{.Name | lowercase}}" {{if gt .Length 0}}maxlength="{{.Length}}"{{end}} {{if gt .Size 0}}size="{{.Size}}"{{end}} value="{{"{{"}}.{{.Name}}{{"}}"}}" {{with .Required}}required{{end}}>
+                                    <input class="input" type="number" {{if gt .Step 0}}step="{{.Step}}"{{end}}  {{if gt .Min 0}}min="{{.Min}}"{{end}} {{if gt .Max 0}}max="{{.Max}}"{{end}} placeholder="Number input" name="{{.Name | lowercase}}" id="{{.Name | lowercase}}" {{if gt .Length 0}}maxlength="{{.Length}}"{{end}} {{if gt .Size 0}}size="{{.Size}}"{{end}} value="{{"{{"}}.Entity.{{.Name}}{{"}}"}}" {{with .Required}}required{{end}}>
                                   </div>
                                   {{- "{{"}}with $errors.{{.Name}}{{"}}"}} <p class="help is-danger">{{"{{"}}.{{"}}"}} </p>{{"{{"}}end{{"}}"}}
                                 </div>{{end}}
-{{- if eq .Kind "Boolean"}}             <div class="field">
+{{- if eq .Kind "Boolean"}}     <div class="field">
                                   <label class="label">{{.Name}} {{with .Required}}*{{end}}</label>
                                   <div class="control">
                                     <label class="radio">
-                                      <input type="radio" name="{{.Name | lowercase}}" id="{{.Name | lowercase}}" value="true" {{"{{"}}if eq .{{.Name}} true{{"}}"}}checked="{{"{{"}}.{{.Name}}{{"}}"}} {{"{{"}}end{{"}}"}}">
+                                      <input type="radio" name="{{.Name | lowercase}}" id="{{.Name | lowercase}}true" value="true" {{"{{"}}if eq .Entity.{{.Name}} true{{"}}"}}checked{{"{{"}}end{{"}}"}}">
                                       Yes
                                     </label>
                                     <label class="radio">
-                                      <input type="radio" name="{{.Name | lowercase}}" id="{{.Name | lowercase}}" value="false" {{"{{"}}if ne .{{.Name}} true{{"}}"}}checked="{{"{{"}}.{{.Name}}{{"}}"}} {{"{{"}}end{{"}}"}}">
+                                      <input type="radio" name="{{.Name | lowercase}}" id="{{.Name | lowercase}}false" value="false" {{"{{"}}if ne .Entity.{{.Name}} true{{"}}"}}checked{{"{{"}}end{{"}}"}}">
                                       No
                                     </label>
                                   </div>
@@ -77,9 +77,9 @@
                                   <label class="label">{{.Name}} {{with .Required}}*{{end}}</label>
                                   <div class="control">
                                     <div class="select">
-                                      <select name="{{.Name | lowercase}}" id="{{.Name | lowercase}}" value="{{"{{"}}.{{.Name}}{{"}}"}}" {{with .Required}}required{{end}}>{{"{{"}}${{.Name | lowercase}}:=.{{.Name}}{{"}}"}}
-                                       {{"{{"}}range .Lookup{{.Object}}{{"}}"}}
-                                        <option value="{{"{{.ID}}"}}">{{"{{.Text}}"}}</option>
+                                      <select name="{{.Name | lowercase}}" id="{{.Name | lowercase}}" value="{{"{{"}}.Entity.{{.Name}}{{"}}"}}" {{with .Required}}required{{end}}>
+                                       {{"{{"}}range $key, $value :=(index .Lookups "{{.Name | plural}}"){{"}}"}}
+                                        <option value="{{"{{$key}}"}}">{{"{{$value}}"}}</option>
                                       {{"{{end}}"}}
                                       </select>
                                     </div>
@@ -89,13 +89,13 @@
                                   <label class="label">{{.Name}} {{with .Required}}*{{end}}</label>
                                   <div class="control">
                                     <div class="select">
-                                      <select name="{{.Name | lowercase}}" id="{{.Name | lowercase}}" value="{{"{{"}}.{{.Name}}{{"}}"}}" {{with .Required}}required{{end}}>{{"{{"}}${{.Name | lowercase}}id:=.{{.Name}}{{"}}"}}
-                                       {{"{{"}}range .Lookup{{.Object}}{{"}}"}}
-                                        <option value="{{"{{.ID}}"}}">{{"{{.Label}}"}}</option>
-                                     {{/*   <option value="{{"{{.ID}}"}}" {{"{{"}}if eq .{{.ID}} ${{.Name | lowercase}}id{{"}}"}}readonly="readonly"{{"{{"}}end{{"}}"}}>{{"{{.Label}}"}}</option>  */}}
+                                      <select name="{{.Name | lowercase}}" id="{{.Name | lowercase}}" value="{{"{{"}}.Entity.{{.Name}}{{"}}"}}" {{with .Required}}required{{end}}>
+                                       {{"{{"}}range $key, $value :=(index .Lookups "{{.Name | plural}}"){{"}}"}}
+                                        <option value="{{"{{$key}}"}}">{{"{{$value}}"}}</option>
                                       {{"{{end}}"}}
                                       </select>
                                     </div>
                                   </div>
                                 </div>{{end}}                                
 {{- end}}
+
