--- a/modules/view/server/handler.tmpl
+++ b/modules/view/server/handler.tmpl
@@ -21,8 +21,24 @@ func (s Server) List{{plural .Name}}(c echo.Context) error {
 	if err != nil {
 		return echo.NewHTTPError(http.StatusNotFound, "{{plural .Name}} not found")
 	}
+	
+	data := struct {		
+		Lookups map[string]model.Labels
+		{{- range .Fields}}{{if eq .Kind "Parent" }}
+		{{.Object}}Childs model.{{.Object}}List
+		{{- end}}{{end}}
+		Entities  model.{{.Name}}List
+	}{}
+	data.Entities = {{.Name | plural | lowercase}}
+	data.Lookups = make(map[string]model.Labels)
+	
+	{{- $name := .Name}}
+	{{- range .Fields}}{{if eq .Kind "Lookup" "Child"}}
+	data.Lookups["{{.Object | plural}}"], _ = s.Env.{{.Object | plural}}.GetLabels()	
+	{{- end}}{{end}}
+	
 	p:=NewPage("{{.Name | plural}}", "{{.Name | plural}}")
-	p.Data = {{.Name | plural | lowercase}}
+	p.Data = data
 	return c.Render(http.StatusOK, "{{lowercase .Name}}list", p)
 }
 
@@ -38,20 +54,18 @@ func (s Server) Get{{.Name}}(c echo.Context) error {
 	
 	data := struct {		
 		Lookups map[string]model.Labels
-		{{range .Fields}}{{if eq .Kind "Parent" }}
+		{{- range .Fields}}{{if eq .Kind "Parent" }}
 		{{.Object}}Childs model.{{.Object}}List
-		{{end}}	{{end}}
+		{{- end}}{{end}}
 		Entity  *model.{{.Name}}
 	}{}
 	data.Entity = {{lowercase .Name}}
 	data.Lookups = make(map[string]model.Labels)
 	
 	{{- $name := .Name}}
-	{{range .Fields}}{{if eq .Kind "Lookup"}}
+	{{- range .Fields}}{{if eq .Kind "Lookup" "Child"}}
 	data.Lookups["{{.Object | plural}}"], _ = s.Env.{{.Object | plural}}.GetLabels()	
-	{{- end}}{{if eq .Kind "Parent" }}
-	data.{{.Object}}Childs, _ = s.Env.{{$name | plural}}.GetAll{{.Object | plural}}ByParentID(asUint(id))
-	{{end}}	{{end}}
+	{{- end}}{{end}}
 	
 	p:=NewPage("Edit {{.Name}}", "{{.Name | plural}}")
 	p.Data = data
@@ -66,19 +80,18 @@ func (s Server) New{{.Name}}(c echo.Context) error {
 
 	data := struct {		
 		Lookups map[string]model.Labels
-		{{range .Fields}}{{if eq .Kind "Parent" }}
+		{{- range .Fields}}{{if eq .Kind "Parent" }}
 		{{.Object}}Childs model.{{.Object}}List
-		{{end}}	{{end}}
+		{{- end}}{{end}}
 		Entity  *model.{{.Name}}
 	}{}
 	data.Entity = {{lowercase .Name}}
 	data.Lookups = make(map[string]model.Labels)
 	
 	{{- $name := .Name}}
-	{{range .Fields}}{{if eq .Kind "Lookup" "Child"}}
+	{{- range .Fields}}{{if eq .Kind "Lookup" "Child"}}
 	data.Lookups["{{.Object | plural}}"], _ = s.Env.{{.Object | plural}}.GetLabels()	
-	{{- end}}
-	{{end}}
+	{{- end}}{{end}}
 	
 	p:=NewPage("New {{.Name}}", "{{.Name | plural}}")
 	p.Data = data
