first functioning version

--- a/modules/model/templates/modeltypes.tmpl
+++ b/modules/model/templates/modeltypes.tmpl
@@ -8,9 +8,11 @@
 {{- if eq .Kind "Tel"}}	{{.Name}}	string	`form:"{{lowercase .Name}}", db:"{{lowercase .Name}}"`{{end}}
 {{- if eq .Kind "Longtext"}}	{{.Name}}	string	`form:"{{lowercase .Name}}" ,db:"{{lowercase .Name}}"`{{end}}
 {{- if eq .Kind "Time"}}	{{.Name}}	time.Time	`form:"{{lowercase .Name}}", db:"{{lowercase .Name}}"`{{end}}
-{{- if eq .Kind "Lookup"}}	{{.Name}}	uint64	`form:"{{lowercase .Name}}", db:"{{lowercase .Name}}"`	// Lookup entity: {{.Name}}{{end}}
+{{- if eq .Kind "Lookup"}}	{{.Name}}	uint64	`form:"{{lowercase .Name}}", db:"{{lowercase .Name}}"`	// Lookup entity: {{.Name}}
+	{{.Object}}	string // {{.Object}} label will not be persistet is list view{{end}}
 {{- if eq .Kind "Parent"}}	{{.Name | plural}}	{{.Object}}List	`form:"-"`	// one2many: childs only for view (not persistet){{end}}
-{{- if eq .Kind "Child"}}	{{.Name}}	uint64	`form:"{{lowercase .Name}}", db:"{{lowercase .Name}}"`	// one2many: parent entity {{.Name}}{{end}}
+{{- if eq .Kind "Child"}}	{{.Name}}	uint64	`form:"{{lowercase .Name}}", db:"{{lowercase .Name}}"`	// one2many: parent entity {{.Name}}
+	{{.Object}}	string // {{.Object}} label will not be persistet is for list view{{end}}
 {{- if eq .Kind "manychild"}}	{{.Name}}Id	string	`json:"{{lowercase .Name}}", db:"{{lowercase .Name}}"`	// many2many: Id of parent object, mappingtable: {{.Object}}{{end}}
 {{- if eq .Kind "manyparent"}}	{{.Name | plural}}	{{.Name}}List	`json:"-"`	// many2many: childs of target, mappingtable: {{.Object}}{{end}}
 {{- end}}
