--- a/modules/model/templates/repository.tmpl
+++ b/modules/model/templates/repository.tmpl
@@ -42,7 +42,7 @@ type {{.Name}}Repository interface {
 	Insert({{.Name | lowercase}} *{{.Name}}) error 
  	GetLabels() (Labels, error)
 	{{- range .Fields}}{{if eq .Kind "Parent"}}
-	GetAll{{.Name | plural}}ByParentID(parentID uint64) ({{.Name}}List, error)				
+	GetAll{{.Name | plural}}ByParentID(parentID uint64) ({{.Name}}List)				
 	{{- end}}{{end}}
 }
 {{end}}
