--- a/modules/view/templates/listtable.html
+++ b/modules/view/templates/listtable.html
@@ -2,10 +2,6 @@
 {{with .Entity}}
 {{"{{"}}define "{{lowercase .Name}}listtable" {{"}}"}}
 <!-- Time: {{.TimeStamp}} -->
-{{range .Fields}}
-{{- if eq .Kind "Child" "Lookup"}}
- {{"{{"}}${{.Object | plural | lowercase}}Labels := .Lookups.{{.Object | plural}}{{"}}"}}
-{{- end}}{{end}}
                        <div class="card events-card">      
                             <div class="card-table">
                                 <div class="content">
@@ -13,27 +9,29 @@
                                      <thead>
                                       <tr>
                                         {{range .Fields -}}
-                                          {{if eq .Kind "Parent" }}{{else}}<th>{{.Name}}</th>{{- end}}
+                                          {{- if ne .Kind "Parent" }}
+                                          {{- if eq .Kind "Lookup" "Child"}}<th>{{.Object}}</th>
+                                          {{- else if ne .Name "ID"}}<th>{{.Name}}</th>{{end}}
+                                          {{- end}}
                                         {{end -}}
                                         <th></th>	
                                       </tr>
                                     </thead>
                                         <tbody>
-                                          {{"{{"}}range .Entities{{"}}"}}
+                                          {{"{{"}}range .{{"}}"}}
                                           <tr>
-                                            {{- $entityname := .Name}}
-                                            {{range .Fields}}                                            
-                                              <td>
-                                                {{- if eq .Kind "Parent"}}{{- else}}
-                                                {{- if eq .Kind "Child"}}{{"{{"}}index ${{.Object | plural | lowercase}}Labels .{{.Name}}{{"}}"}}
-                                                {{- else if eq .Kind "Lookup"}}{{"{{"}}index ${{.Object | plural | lowercase}}Labels .{{.Name}}{{"}}"}}
-                                                {{- else if eq .IsLabel true}}<a href="/{{$entityname | plural | lowercase}}/{{"{{.ID}}"}}">{{"{{"}}.{{.Name}}{{"}}"}}</a>
-                                                {{- else if eq .Kind "Boolean"}}<span>
-                                                {{"{{"}}if eq .{{.Name}} true{{"}}"}}<i class="far fa-check-square"></i>{{"{{"}}else{{"}}"}}<i class="far fa-square"></i>{{"{{"}}end{{"}}"}}
-                                                </span>
-                                                {{- else}}{{"{{"}}.{{.Name}}{{"}}"}}
-                                              {{- end}}</td>{{end}}	
-                                            {{end -}}
+                                          {{- $entityname := .Name}}
+                                            {{range .Fields}}                                                                                          
+                                              {{- if eq .Kind "Parent"}}{{end}}
+                                              {{- if eq .Kind "Child"}}<td>{{"{{"}}.{{.Object}}{{"}}"}} </td>{{end}}
+                                              {{- if eq .Kind "Lookup"}}<td>{{"{{"}}.{{.Object}}{{"}}"}} </td>{{end}}                                              
+                                              {{- if eq .Kind "Boolean"}}<td><span>{{"{{"}}if eq .{{.Name}} true{{"}}"}}<i class="far fa-check-square"></i>{{"{{"}}else{{"}}"}}<i class="far fa-square"></i>{{"{{"}}end{{"}}"}} </span> </td>{{end}}
+                                              {{- if eq .Kind "Tel" "Text" "Password" "Longtext" "Email"}}
+                                                {{- if eq .IsLabel true}}<td><a href="/{{$entityname | plural | lowercase}}/{{"{{.ID}}"}}">{{"{{"}}.{{.Name}}{{"}}"}}</a> </td>
+                                                {{- else}}<td>{{"{{"}}.{{.Name}}{{"}}"}} </td>{{end}}{{end}}
+                                              {{- if eq .Kind "Number"}}<td>{{"{{"}}.{{.Name}}{{"}}"}} </td>{{end}}
+                                              {{- if eq .Kind "Integer"}}{{- if ne .Name "ID"}}<td>{{"{{"}}.{{.Name}}{{"}}"}} </td>{{end}} {{end}}                                        
+                                            {{end}}
                                             <td>
                                             <div class="buttons is-right">
                                             <form method="post" action="/{{.Name | plural | lowercase}}/{{"{{.ID}}"}}/delete" name="{{"{{.ID}}"}}">
